--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Aplication</title>
-    <link rel="stylesheet" href="/styles/main.css">
-</head>
-<body>
-    <form action="/current-weather" method="POST">
-        <input type="text" name="city" placeholder="City name" required>
-        <button type="submit">Find</button>
-    </form>
+<%- include('partials/header.ejs', { title: 'SkyCheck', pageClass: 'home-page',  leaflet: false }) %>
+
+<div class="home-container">
+    <div class="instruction-text">
+        <p>Enter a city name to view its weather:</p>
+    </div>
+    <div class="form-container">
+        <form action="/current-weather" method="POST">
+            <input type="text" name="city" placeholder="City name" required>
+            <button type="submit">Search</button>
+        </form>
+    </div>
+</div>
     
-</body>
-</html>
+<%- include('partials/footer.ejs') %>
